Restore missing teamselect layout rules in oldclient.css: team name on its own centered line with icons in a single clipped row beneath, fixing name and icon interleaving in the battle panel team preview at narrow and mobile widths

--- a/pokemon-showdown-client/play.pokemonshowdown.com/style/oldclient.css
+++ b/pokemon-showdown-client/play.pokemonshowdown.com/style/oldclient.css
@@ -550,6 +550,24 @@ p.or:after {
 .team.teamselect small .picon {
 	margin-right: -6px;
 }
+.select.teamselect {
+	height: 50px;
+	white-space: nowrap;
+	overflow: hidden;
+}
+.select.teamselect strong {
+	display: block;
+	font-size: 8pt;
+	margin-right: 15px;
+	text-align: center;
+}
+.select.teamselect small {
+	margin: -1px 0 0 -3px;
+	display: block;
+}
+.select.teamselect small .picon {
+	margin: 0 -3px;
+}
 .teamselect:disabled strong {
 	color: #444444;
 }
